--- a/all/pom.xml
+++ b/all/pom.xml
@@ -53,36 +53,42 @@
 				<groupId>tk.mybatis</groupId>
 				<artifactId>mapper-core</artifactId>
 				<version>${mapper-module.version}</version>
+				<classifier>hufu</classifier>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>tk.mybatis</groupId>
 				<artifactId>mapper-base</artifactId>
 				<version>${mapper-module.version}</version>
+				<classifier>hufu</classifier>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>tk.mybatis</groupId>
 				<artifactId>mapper-extra</artifactId>
 				<version>${mapper-module.version}</version>
+				<classifier>hufu</classifier>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>tk.mybatis</groupId>
 				<artifactId>mapper-spring</artifactId>
 				<version>${mapper-module.version}</version>
+				<classifier>hufu</classifier>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>tk.mybatis</groupId>
 				<artifactId>mapper-weekend</artifactId>
 				<version>${mapper-weekend.version}</version>
+				<classifier>hufu</classifier>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>tk.mybatis</groupId>
 				<artifactId>mapper-generator</artifactId>
 				<version>${mapper-module.version}</version>
+				<classifier>hufu</classifier>
 				<scope>compile</scope>
 			</dependency>
 		</dependencies>
