--- a/spring-boot-starter/mapper-spring-boot-starter/pom.xml
+++ b/spring-boot-starter/mapper-spring-boot-starter/pom.xml
@@ -31,8 +31,10 @@
         <artifactId>mapper-spring-boot</artifactId>
         <version>2.1.5</version>
     </parent>
+
     <artifactId>mapper-spring-boot-starter</artifactId>
     <name>mapper-spring-boot-starter</name>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -50,29 +52,36 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
         </dependency>
+
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-core</artifactId>
+            <classifier>hufu</classifier>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-base</artifactId>
+            <classifier>hufu</classifier>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-weekend</artifactId>
+            <classifier>hufu</classifier>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring</artifactId>
+            <classifier>hufu</classifier>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-extra</artifactId>
+            <classifier>hufu</classifier>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-autoconfigure</artifactId>
+            <classifier>hufu</classifier>
         </dependency>
     </dependencies>
 </project>
